# pdb2fasta

./: .clang-format  .cmake-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  README.md  main.c
extras/: CMakeLists.txt  cli.c
include/pdb2fasta/: pdb2fasta.h
src/: CMakeLists.txt  codon3to1.c  codon3to1.h  pdb2fasta.c
